--- a/style.css
+++ b/style.css
@@ -90,8 +90,17 @@ a:hover {
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
-    text-transform: uppercase;
+    
   }
+
+  .navbar .logo a span {
+    color: #e1e4e3;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    
+  }
+  
   
   .nav-links {
     display: flex;
